WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
270389
[Skia] Fix support for custom cursors
https://bugs.webkit.org/show_bug.cgi?id=270389
Summary
[Skia] Fix support for custom cursors
Patrick Griffis
Reported
2024-03-01 18:03:59 PST
""
Attachments
Add attachment
proposed patch, testcase, etc.
Patrick Griffis
Comment 1
2024-03-01 18:05:36 PST
Pull request:
https://github.com/WebKit/WebKit/pull/25372
EWS
Comment 2
2024-03-04 17:34:48 PST
Committed
275665@main
(1853a763ab99): <
https://commits.webkit.org/275665@main
> Reviewed commits have been landed. Closing PR #25372 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug