[Skia] Fix support for custom cursors https://bugs.webkit.org/show_bug.cgi?id=270389

Reviewed by Carlos Garcia Campos.

* Source/WebCore/platform/graphics/skia/ShareableBitmapSkia.cpp:
(WebCore::ShareableBitmap::createImage):
* Source/WebKit/UIProcess/API/wpe/WPEWebView.cpp:
(WKWPE::View::setCursor):

Canonical link: https://commits.webkit.org/275665@main